@@ -30,7 +30,7 @@ libcurl, including:
 Requirements
 ------------
 
-- Python 2.6, 2.7 or 3.1 through 3.6.
+- Python 2.7 or 3.1 through 3.6.
 - libcurl 7.19.0 or better.
 
 
