@@ -57,7 +57,7 @@ About libcurl
 Requirements
 ------------
 
-- Python 2.6, 2.7 or 3.1 through 3.6.
+- Python 2.7 or 3.1 through 3.6.
 - libcurl 7.19.0 or better.
 
 
@@ -74,8 +74,7 @@ Installation via easy_install and pip is also supported::
 
 If this does not work, please see :ref:`install`.
 
-On Windows, use pip to install a binary wheel for Python 2.6, 2.7 or
-3.2 through 3.6::
+On Windows, use pip to install a binary wheel for Python 2.7, 3.5 or 3.6::
 
     pip install pycurl
 
