@@ -5,6 +5,4 @@ nose>=1.3.2
 flaky
 pyflakes
 nose-show-skipped
-# for python 2.6
-unittest2
 sphinx
