@@ -696,7 +696,7 @@ libcurl, including:
 Requirements
 ------------
 
-- Python 2.6, 2.7 or 3.1 through 3.6.
+- Python 2.7 or 3.1 through 3.6.
 - libcurl 7.19.0 or better.
 
 
@@ -767,7 +767,6 @@ in COPYING-LGPL_ and COPYING-MIT_ files in the source distribution.
         'Operating System :: Microsoft :: Windows',
         'Operating System :: POSIX',
         'Programming Language :: Python :: 2',
-        'Programming Language :: Python :: 2.6',
         'Programming Language :: Python :: 2.7',
         'Programming Language :: Python :: 3',
         'Programming Language :: Python :: 3.2',
