@@ -1,6 +1,8 @@
 master
 ------
 
+        * Support for Python 2.6 officially dropped.
+
         * Added SOCKET_BAD constant and it is now recognized as a valid
           return value from OPENSOCKET callback.
 
